Third Commit: Adding sounds

--- a/Content/app.css
+++ b/Content/app.css
@@ -6,4 +6,6 @@ body {
     border: 1px black dotted;
     background-color: white;
     border-radius: 1%;
+    display: block;
+    margin: auto;
 }
